# navier

./: .gitignore  Cargo.toml  flake.nix
ocl-vkfft/: Cargo.toml  build.rs  test.c
ocl-vkfft/src/: foo.c  lib.rs  temp.rs  test.c
src/: kernels.cl  main.rs  utils.rs
